# P9-BW-ADD

./: .gitignore  Dockerfile  LICENSE  README.md  cock.py  docker-compose.yaml  mtbdd.drdd  qodana.yaml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/latex/: devcontainer.json
.github/: CODEOWNERS
.github/configurations/: pages.json  rulesets.json
.github/workflows/: compile-pdf.yaml  publish-docker-image.yaml  qodana-code-quality.yaml  setup-github.yaml  todos-to-issues.yaml
CuPAAL/: CMakeLists.txt
docs/: index.md
report/src/: draft.tex  hmm-example.tex  main.tex
report/src/bib/: main.bib
report/src/deprecated/: 01-introduction.tex  02-preliminaries.tex  class-diagram.tex  definitions.tex  experiment.tex
report/src/figures/: add_example_hadamard.tex  add_example_hadamard_div.tex  add_example_katri_rao.tex  add_example_kroneker.tex  add_example_muliplication.tex  add_example_sum.tex  add_example_transpose.tex  graph.pgf  jajapy_scalability.data  polling_results_table.tex  scalability_graph.tex  vector_add_example.tex  vector_add_example_reduced.tex
report/src/sections/: 00-abstract.tex  01-introduction.tex  02-preliminaries.tex  03-implementation.tex  04-experiments.tex  05-discussion.tex  06-conclusion.tex  07-future_works.tex  08-acknowledgements.tex  aa-appendix.tex  class-diagram.tex  definitions.tex  experiment.tex  hmm-example.tex
report/src/setup/: IEEEtran.cls  acronyms.tex  clrscode4e.sty  preamble.tex  title.tex
